changes to comment and adsence

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,12 @@
 />
 <!-- adsense -->
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+<script>
+ /*  async
+  data-ad-client="ca-pub-yourGoogleAdId" */
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+</script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
