--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="images/SCS_Target_Transparent.svg" />
-    <link rel="apple-touch-icon" href="images/SCS_Target_Transparent.svg" />
+    <link rel="icon" href="../src/images/SCS_Target3_Transparent.svg" />
+    <link rel="apple-touch-icon" href="../src/images/SCS_Target3_Transparent.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
